plugins {
    id 'com.diffplug.spotless' version '8.8.0' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'pmd'
    apply plugin: 'com.diffplug.spotless'
    apply plugin: 'maven-publish'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }

        withSourcesJar()
    }

    base {
        archivesName = mod_name
    }

    repositories {
        mavenCentral()

        maven {
            name = 'Sponge / Mixin'
            url = 'https://repo.spongepowered.org/repository/maven-public/'
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 25
    }

    tasks.withType(GenerateModuleMetadata).configureEach {
        enabled = false
    }

    pmd {
        toolVersion '6.35.0'
        incrementalAnalysis.set(true)
        ruleSetFiles = rootProject.files('spotless/pmd-ruleset.xml')
    }

    jar {
        from 'LICENSE'

        exclude '**/*.bat'
        exclude '**/*.psd'
        exclude '**/*.ase'
        exclude '**/*.exe'
        exclude '**/unused'
        exclude '.cache'
    }

    spotless {
        enforceCheck = false

        java {
            indentWithTabs()
            eclipse().configFile rootProject.file('spotless/eclipseformat.xml')
            removeUnusedImports()
            importOrderFile rootProject.file('spotless/eclipse.importorder')
        }
    }
}